styles/components/service-block.scss
.service-block {
  padding-top: 75px;
  @media (min-width: $tablet) {
    padding-top: 80px;
  }
  
  &-flex {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
    @media (min-width: $tablet) {
      flex-wrap: nowrap;
    }
  }

  .text-left {
    .service-block-text {
      @media (min-width: $desktop) {
        margin-left: 3rem;
      }
    }
  }

  .text-right {
    .service-block-text {
      @media (min-width: $desktop) {
        margin-right: 3rem;
      }
    }
  }
  
  &-text {
    order: 1;
    width: 100%;
    @media (min-width: $tablet) {
      order: 0;
      width: auto;
    }
    @media (min-width: $desktop) {
      max-width: 405px;
      padding-top: 100px;
    }
  }

  &-title {
    font-size: 26px;
    margin-bottom: 30px;
    @media (min-width: $tablet) {
      font-size: 70px;
    }
  }
  
  &-copy {
    padding-left: 15px;
    font-size: 16px;
    @media (min-width: $tablet) {
      padding-left: 40px;
    }
  }
  
  &-services {
    margin-bottom: 25px;  
  }
  
  &-service {
    color: $service-green;
    margin-bottom: 10px;
  }
  
  &-img {
    position: relative;
    min-width: 300px;
    width: 100%;
    @media (min-width: $desktop) {
      padding: 30px;
      width: auto;  
    }
    
    img {
      margin: 0 auto;
    }
    .img-background {
      display: block;
      margin: 0 auto;
      width: 100%;
    }
    .img-right-side {
      position: absolute;
      right: 0;
      img {
        margin-right: 0;
      }
    }
    .img-left-side {
      position: absolute;
      left: 0;
      img {
        margin-left: 0;
      }
    }
  }


  /* Some Service Blocks need slightly different styling */
  /* The images are all over the place for size/placement so adjusting those values as well */
  &.strategy {
    .service-block-text {
      @media (min-width: $desktop) {
        padding-top: 75px;
      }
    }
    .img-right-side {
      right: -15px;
      width: 42%;
      top: 23%;
      @media (min-width: $tablet) {

      }
    }
    .img-left-side {
      width: 31%;
      top: 58%;
      left: 18%;
      @media (min-width: $tablet) {
        top: 30%;
      }
      @media (min-width: $desktop) {
        top: 60%;
      }
    }
  }

  &.digital {
    @media (min-width: $tablet) {
      padding-top: 0;
    }
    .service-block-text {
      padding-top: 50px;
      @media (min-width: $tablet) {
        padding-top: 0;
      }
    }
    .img-right-side {
      right: -2%;
      width: 75%;
      top: 57%;
      bottom: auto;
      @media (min-width: $tablet) {
        right: -8%;
        width: 82%;
        top: 25%;
      }
      @media (min-width: $desktop) {
        top: 57%;
      }
    }
    .img-left-side {
      top: 42%;
      left: -3%;
      right: auto;
      width: 40%;
      bottom: auto;
      @media (min-width: $tablet) {
        width: 42%;
        top: 21%;
      }
      @media (min-width: $desktop) {
        top: 42%;
      }
    }
  }

  &.branding {
    padding-top: 0;
    @media (min-width: $tablet) {
      padding-top: 75px;
    }
    @media (min-width: $desktop) {
      margin-top: -180px;
    }
    .service-block-text {
      padding-top: 50px;
      @media (min-width: $tablet) {
        padding-top: 0;
        padding-right: 4rem;
      }
      @media (min-width: $desktop-large) {
        padding-right: 0;
      }
    }
    .img-right-side {
      width: 60%;
      @media (min-width: $desktop-large) {
        width: auto;
      }
    }
    .img-left-side {
      left: -10%;
      right: auto;
      top: 41%;
      width: 80%;
      @media (min-width: $tablet) {
        left: -29%;
        top: 26%;
      }
      @media (min-width: $desktop) {
        left: -24%;
        top: 41%;
      }
      @media (min-width: $desktop-large) {
        left: -29%;
      }
    }
  }

  &.marketing {
    padding-top: 0;
    @media (min-width: $tablet) {
      padding-top: 95px;
      padding-bottom: 100px;
    }
    @media (min-width: $desktop) {
      margin-top: -160px;
    }
    .service-block-text {
      padding-top: 50px;
      @media (min-width: $tablet) {
        padding-top: 0;
        margin-right: 10rem;
      }
    }
    .img-right-side {
      top: 71%;
      width: 59%;
      @media (min-width: $tablet) {
        top: 35%;
      }
      @media (min-width: $desktop) {
        top: 71%;
      }
    }
    .img-left-side {
      width: 55%;
      top: 64%;
      @media (min-width: $tablet) {
        top: 32%;
      }
      @media (min-width: $desktop) {
        top: 64%;
      }
    }
  }

}

